fix backend bugs and recreate docs
